--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 # update CI workflow for sub directory: ./simple_bank/simplebank-master/simplebank
+# general CI workflow for all projects
 name: ci-test
 
 on:
